# ioun

./: .env.prod.sample  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  compose.override.sample.yml  compose.yaml
.github/workflows/: build-release.yaml  format-check.yaml  security-audit.yaml
.sqlx/: query-330399905ee29e8cc18c2ec4b7a214db27b652802aec20c481833c8a3f4522c0.json  query-636ca6ed22cbccf2bcf430e18f09689cd99a85083d6e79ad7212245e51f74728.json  query-eacfc20723cd3af75db34b952554fb080dc193c65b155eb4a7abfe5fe7bc6608.json  query-fb3a8aa2161b9f8476ac5bee989105c0df0c9f62e53d8d02905065ab6f586913.json
migrations/: 20240929044346_updated_at.sql  20240930014024_account.sql
queries/user/: get.sql  get_email.sql  insert.sql
src/: lib.rs  main.rs
src/database/: postgres.rs
src/errors/: mod.rs
src/models/: account.rs  mod.rs  session.rs
src/routes/: auth.rs  mod.rs
