[package]
name = "ioun"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tracing"] }
dotenvy = "0.15.7"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx =  { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
