[package]
name = "ioun"
version = "0.0.1"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.7", features = ["tracing", "macros"] }
dotenvy = "0.15.7"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx =  { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
    "uuid",
] }
thiserror = "1.0.64"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.0.0-rc", features = [
    "axum_extras",
    "debug",
    "uuid",
    "preserve_order"
] }
utoipa-axum = "0.1.0-rc.0"
utoipa-swagger-ui = { version = "7.1.1-rc", features = ["axum", "vendored"] }
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
