[package]
name = "ioun"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.9", features = ["tracing", "macros"] }
dotenvy = "0.15.7"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx =  { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
    "uuid",
] }
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = [
    "axum_extras",
    "debug",
    "uuid",
    "preserve_order"
] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "vendored"] }
uuid = { version = "1.11.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
